fix spacing with string for price

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -16,7 +16,13 @@
 
 .card-info {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
+  margin-bottom: 5px;
+
+  p {
+    margin: 8px;
+  }
 }
 
 .badge {
