--- a/app/assets/stylesheets/components/_image_card.scss
+++ b/app/assets/stylesheets/components/_image_card.scss
@@ -23,6 +23,12 @@
     flex-direction: column;
     justify-content: space-evenly;
 
+    h3 {
+      margin-top: 5px;
+      font-style: italic;
+      font-size: 24px;
+    }
+
     .category-tag {
       margin-bottom: 0;
     }
